courses/430_programming-languages/assignment-6/tests/error/hw4_error27.nex
var a : int;
var b : int;
var c : int;
var a : int;
print "should not get here:n";
1 / 0;

print a;
